# cudf-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  column.rs  scalar.rs
.github/workflows/: ci.yml
cudf/: Cargo.toml  README.md
cudf-cxx/: Cargo.toml  README.md  build.rs
cudf-cxx/cpp/: README.md
cudf-cxx/cpp/include/: aggregation_shim.h  binaryop_shim.h  column_shim.h  concatenate_shim.h  copying_shim.h  datetime_shim.h  dictionary_shim.h  enum_verify.h  filling_shim.h  groupby_shim.h  hashing_shim.h  interop_shim.h  join_shim.h  json_shim.h  label_bins_shim.h  merge_shim.h  null_mask_shim.h  order_utils.h  partitioning_shim.h  quantiles_shim.h  reduction_shim.h  replace_shim.h  reshape_shim.h  rolling_shim.h  round_shim.h  scalar_shim.h  search_shim.h  sorting_shim.h  stream_compaction_shim.h  structs_shim.h  table_shim.h  timezone_shim.h  transform_shim.h  transpose_shim.h  types_shim.h  unary_shim.h
cudf-cxx/cpp/include/io/: avro_shim.h  csv_shim.h  json_shim.h  orc_shim.h  parquet_shim.h
cudf-cxx/cpp/include/lists/: lists_shim.h
cudf-cxx/cpp/include/strings/: attributes_shim.h  case_shim.h  char_types_shim.h  combine_shim.h  contains_shim.h  convert_shim.h  extract_shim.h  find_shim.h  findall_shim.h  like_shim.h  padding_shim.h  partition_shim.h  repeat_shim.h  replace_shim.h  reverse_shim.h  slice_shim.h  split_re_shim.h  split_shim.h  strip_shim.h  translate_shim.h  wrap_shim.h
cudf-cxx/cpp/src/: aggregation_shim.cpp  binaryop_shim.cpp  column_shim.cpp  concatenate_shim.cpp  copying_shim.cpp  datetime_shim.cpp  dictionary_shim.cpp  filling_shim.cpp  groupby_shim.cpp  hashing_shim.cpp  interop_shim.cpp  join_shim.cpp  json_shim.cpp  label_bins_shim.cpp  merge_shim.cpp  null_mask_shim.cpp  partitioning_shim.cpp  quantiles_shim.cpp  reduction_shim.cpp  replace_shim.cpp  reshape_shim.cpp  rolling_shim.cpp  round_shim.cpp  scalar_shim.cpp  search_shim.cpp  sorting_shim.cpp  stream_compaction_shim.cpp  structs_shim.cpp  table_shim.cpp  timezone_shim.cpp  transform_shim.cpp  transpose_shim.cpp  types_shim.cpp  unary_shim.cpp
cudf-cxx/cpp/src/io/: avro_shim.cpp  csv_shim.cpp  json_shim.cpp  orc_shim.cpp  parquet_shim.cpp
cudf-cxx/cpp/src/lists/: lists_shim.cpp
cudf-cxx/cpp/src/strings/: attributes_shim.cpp  case_shim.cpp  char_types_shim.cpp  combine_shim.cpp  contains_shim.cpp  convert_shim.cpp  extract_shim.cpp  find_shim.cpp  findall_shim.cpp  like_shim.cpp  padding_shim.cpp  partition_shim.cpp  repeat_shim.cpp  replace_shim.cpp  reverse_shim.cpp  slice_shim.cpp  split_re_shim.cpp  split_shim.cpp  strip_shim.cpp  translate_shim.cpp  wrap_shim.cpp
cudf-cxx/src/: aggregation.rs  binaryop.rs  column.rs  concatenate.rs  copying.rs  datetime.rs  dictionary.rs  filling.rs  groupby.rs  hashing.rs  interop.rs  join.rs  json.rs  label_bins.rs  lib.rs  merge.rs  null_mask.rs  partitioning.rs  quantiles.rs  reduction.rs  replace.rs  reshape.rs  rolling.rs  round.rs  scalar.rs  search.rs  sorting.rs  stream_compaction.rs  structs.rs  table.rs  timezone.rs  transform.rs  transpose.rs  types.rs  unary.rs
cudf-cxx/src/io/: avro.rs  csv.rs  json.rs  mod.rs  orc.rs  parquet.rs
cudf-cxx/src/lists/: mod.rs  ops.rs
cudf-cxx/src/strings/: attributes.rs  case.rs  char_types.rs  combine.rs  contains.rs  convert.rs  extract.rs  find.rs  findall.rs  like.rs  mod.rs  padding.rs  partition.rs  repeat.rs  replace.rs  reverse.rs  slice.rs  split.rs  split_re.rs  strip.rs  translate.rs  wrap.rs
cudf-polars/: Cargo.toml  README.md
cudf-polars/examples/: benchmark.rs
cudf-polars/src/: convert.rs  engine.rs  error.rs  expr.rs  gpu_frame.rs  lib.rs  types.rs
cudf-polars/tests/: e2e_tests.rs
cudf-sys/: Cargo.toml  README.md  build.rs
cudf-sys/src/: lib.rs
cudf/src/: aggregation.rs  binaryop.rs  column.rs  concatenate.rs  copying.rs  datetime.rs  dictionary.rs  error.rs  filling.rs  groupby.rs  hashing.rs  interop.rs  join.rs  json.rs  label_bins.rs  lib.rs  lists.rs  merge.rs  null_mask.rs  partitioning.rs  quantiles.rs  reduction.rs  replace.rs  reshape.rs  rolling.rs  round.rs  scalar.rs  search.rs  sorting.rs  stream_compaction.rs  structs.rs  table.rs  timezone.rs  transform.rs  transpose.rs  types.rs  unary.rs
cudf/src/io/: README.md  avro.rs  csv.rs  json.rs  mod.rs  orc.rs  parquet.rs
cudf/src/strings/: README.md  attributes.rs  case.rs  char_types.rs  combine.rs  contains.rs  convert.rs  extract.rs  find.rs  findall.rs  like.rs  mod.rs  padding.rs  partition.rs  repeat.rs  replace.rs  reverse.rs  slice.rs  split.rs  split_re.rs  strip.rs  translate.rs  wrap.rs
cudf/tests/: gpu_tests.rs  phase2_attack_tests.rs  unit_tests.rs
tests/: polars_gpu_integration.py
