[workspace]
members = ["cudf-sys", "cudf-cxx", "cudf", "cudf-polars"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/0xDaizz/cudf-rs"
readme = "README.md"

[workspace.dependencies]
cxx = "1.0"
cxx-build = "1.0"
thiserror = "2"
arrow = { version = "54", default-features = false, features = ["ipc", "ffi"] }
arrow-schema = "54"
arrow-array = "54"
arrow-buffer = "54"
