[package]
name = "cudf-cxx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "cxx-based FFI bridge between Rust and NVIDIA libcudf C++ API"

[dependencies]
cudf-sys = { path = "../cudf-sys" }
cxx = { workspace = true }

[build-dependencies]
cxx-build = { workspace = true }
