[package]
name = "cudf-polars"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPU execution engine for Polars using NVIDIA libcudf"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
cudf = { path = "../cudf", version = "0.2.0", features = ["arrow-interop"] }
polars-core = { version = "=0.53.0", default-features = false }
polars-utils = { version = "=0.53.0" }
polars-error = { version = "=0.53.0" }
polars-arrow = { version = "=0.53.0" }
polars-plan = { version = "=0.53.0", default-features = false, features = ["parquet", "semi_anti_join", "abs", "is_in"] }
polars-ops = { version = "=0.53.0", default-features = false, features = ["semi_anti_join"] }
polars-lazy = { version = "=0.53.0", default-features = false, features = ["abs", "parquet", "semi_anti_join"], optional = true }
arrow = { version = "54", default-features = false, features = ["ffi"] }

[features]
default = []
lazy = ["polars-lazy"]
gpu-tests = []

[[example]]
name = "benchmark"
required-features = ["gpu-tests"]
