[package]
name = "cudf-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native build script for linking against NVIDIA libcudf"
readme = "README.md"
keywords = ["gpu", "cuda", "ffi", "rapids"]
categories = ["api-bindings"]
links = "cudf"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[build-dependencies]
pkg-config = "0.3"
