[package]
name = "cudf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Safe Rust bindings for NVIDIA libcudf -- GPU-accelerated DataFrame operations"
keywords = ["gpu", "cuda", "dataframe", "arrow", "rapids"]
categories = ["science", "api-bindings"]

[dependencies]
cudf-cxx = { path = "../cudf-cxx" }
thiserror = { workspace = true }
arrow = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-buffer = { workspace = true, optional = true }
cxx = { workspace = true }
num-traits = "0.2"

[features]
default = ["arrow-interop"]
arrow-interop = ["dep:arrow", "dep:arrow-schema", "dep:arrow-array", "dep:arrow-buffer"]

[dev-dependencies]
arrow = { workspace = true }
